@@ -147,7 +147,214 @@ class WepayTest < Test::Unit::TestCase
     assert_match(/Invalid JSON response received from WePay/, response.message)
   end
 
+  def test_scrub
+    assert @gateway.supports_scrubbing?
+    assert_equal @gateway.scrub(pre_scrubbed), post_scrubbed
+  end
+
   private
+
+  def pre_scrubbed
+    %q(
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/credit_card/create HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer STAGE_c91882b0bed3584b8aed0f7f515f2f05a1d40924ee6f394ce82d91018cb0f2d3\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 272\r\n\r\n"
+      <- "{\"client_id\":\"44716\",\"user_name\":\"Longbob Longsen\",\"email\":\"test@example.com\",\"cc_number\":\"5496198584584769\",\"cvv\":\"123\",\"expiration_month\":9,\"expiration_year\":2018,\"address\":{\"address1\":\"456 My Street\",\"city\":\"Ottawa\",\"country\":\"CA\",\"region\":\"ON\",\"postal_code\":\"K1C2N6\"}}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:33 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1231-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231252.436069,VS0,VE1258\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "2b\r\n"
+      reading 43 bytes...
+      -> "{\"credit_card_id\":2559797807,\"state\":\"new\"}"
+      read 43 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/checkout/create HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer STAGE_c91882b0bed3584b8aed0f7f515f2f05a1d40924ee6f394ce82d91018cb0f2d3\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 202\r\n\r\n"
+      <- "{\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":\"2559797807\",\"auto_capture\":false}},\"account_id\":\"2080478981\",\"amount\":\"20.00\",\"short_description\":\"Purchase\",\"type\":\"goods\",\"currency\":\"USD\"}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:36 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1247-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231255.546126,VS0,VE1713\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "324\r\n"
+      reading 804 bytes...
+      -> "{\"checkout_id\":1709862829,\"account_id\":2080478981,\"type\":\"goods\",\"short_description\":\"Purchase\",\"currency\":\"USD\",\"amount\":20,\"state\":\"authorized\",\"soft_descriptor\":\"WPY*Spreedly\",\"create_time\":1493231254,\"gross\":20.88,\"reference_id\":null,\"callback_uri\":null,\"long_description\":null,\"delivery_type\":null,\"fee\":{\"app_fee\":0,\"processing_fee\":0.88,\"fee_payer\":\"payer\"},\"chargeback\":{\"amount_charged_back\":0,\"dispute_uri\":null},\"refund\":{\"amount_refunded\":0,\"refund_reason\":null},\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":2559797807,\"data\":{\"emv_receipt\":null,\"signature_url\":null},\"auto_capture\":false}},\"hosted_checkout\":null,\"payer\":{\"email\":\"test@example.com\",\"name\":\"Longbob Longsen\",\"home_address\":null},\"npo_information\":null,\"payment_error\":null,\"in_review\":false,\"auto_release\":true}"
+      read 804 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/checkout/capture HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer STAGE_c91882b0bed3584b8aed0f7f515f2f05a1d40924ee6f394ce82d91018cb0f2d3\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 28\r\n\r\n"
+      <- "{\"checkout_id\":\"1709862829\"}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:38 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1239-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231257.113609,VS0,VE1136\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "324\r\n"
+      reading 804 bytes...
+      -> "{\"checkout_id\":1709862829,\"account_id\":2080478981,\"type\":\"goods\",\"short_description\":\"Purchase\",\"currency\":\"USD\",\"amount\":20,\"state\":\"authorized\",\"soft_descriptor\":\"WPY*Spreedly\",\"create_time\":1493231254,\"gross\":20.88,\"reference_id\":null,\"callback_uri\":null,\"long_description\":null,\"delivery_type\":null,\"fee\":{\"app_fee\":0,\"processing_fee\":0.88,\"fee_payer\":\"payer\"},\"chargeback\":{\"amount_charged_back\":0,\"dispute_uri\":null},\"refund\":{\"amount_refunded\":0,\"refund_reason\":null},\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":2559797807,\"data\":{\"emv_receipt\":null,\"signature_url\":null},\"auto_capture\":false}},\"hosted_checkout\":null,\"payer\":{\"email\":\"test@example.com\",\"name\":\"Longbob Longsen\",\"home_address\":null},\"npo_information\":null,\"payment_error\":null,\"in_review\":false,\"auto_release\":true}"
+      read 804 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+    )
+  end
+
+  def post_scrubbed
+    %q(
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/credit_card/create HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer [FILTERED]\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 272\r\n\r\n"
+      <- "{\"client_id\":\"44716\",\"user_name\":\"Longbob Longsen\",\"email\":\"test@example.com\",\"cc_number\":\"[FILTERED]\",\"cvv\":\"[FILTERED]\",\"expiration_month\":9,\"expiration_year\":2018,\"address\":{\"address1\":\"456 My Street\",\"city\":\"Ottawa\",\"country\":\"CA\",\"region\":\"ON\",\"postal_code\":\"K1C2N6\"}}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:33 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1231-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231252.436069,VS0,VE1258\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "2b\r\n"
+      reading 43 bytes...
+      -> "{\"credit_card_id\":2559797807,\"state\":\"new\"}"
+      read 43 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/checkout/create HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer [FILTERED]\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 202\r\n\r\n"
+      <- "{\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":\"2559797807\",\"auto_capture\":false}},\"account_id\":\"2080478981\",\"amount\":\"20.00\",\"short_description\":\"Purchase\",\"type\":\"goods\",\"currency\":\"USD\"}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:36 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1247-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231255.546126,VS0,VE1713\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "324\r\n"
+      reading 804 bytes...
+      -> "{\"checkout_id\":1709862829,\"account_id\":2080478981,\"type\":\"goods\",\"short_description\":\"Purchase\",\"currency\":\"USD\",\"amount\":20,\"state\":\"authorized\",\"soft_descriptor\":\"WPY*Spreedly\",\"create_time\":1493231254,\"gross\":20.88,\"reference_id\":null,\"callback_uri\":null,\"long_description\":null,\"delivery_type\":null,\"fee\":{\"app_fee\":0,\"processing_fee\":0.88,\"fee_payer\":\"payer\"},\"chargeback\":{\"amount_charged_back\":0,\"dispute_uri\":null},\"refund\":{\"amount_refunded\":0,\"refund_reason\":null},\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":2559797807,\"data\":{\"emv_receipt\":null,\"signature_url\":null},\"auto_capture\":false}},\"hosted_checkout\":null,\"payer\":{\"email\":\"test@example.com\",\"name\":\"Longbob Longsen\",\"home_address\":null},\"npo_information\":null,\"payment_error\":null,\"in_review\":false,\"auto_release\":true}"
+      read 804 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+      opening connection to stage.wepayapi.com:443...
+      opened
+      starting SSL for stage.wepayapi.com:443...
+      SSL established
+      <- "POST /v2/checkout/capture HTTP/1.1\r\nContent-Type: application/json\r\nUser-Agent: ActiveMerchantBindings/1.65.0\r\nAuthorization: Bearer [FILTERED]\r\nApi-Version: 2017-02-01\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nConnection: close\r\nHost: stage.wepayapi.com\r\nContent-Length: 28\r\n\r\n"
+      <- "{\"checkout_id\":\"1709862829\"}"
+      -> "HTTP/1.1 200 OK\r\n"
+      -> "Server: nginx\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "X-Content-Type-Options: nosniff\r\n"
+      -> "Strict-Transport-Security: max-age=31536000; preload\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Accept-Ranges: bytes\r\n"
+      -> "Date: Wed, 26 Apr 2017 18:27:38 GMT\r\n"
+      -> "Via: 1.1 varnish\r\n"
+      -> "Connection: close\r\n"
+      -> "X-Served-By: cache-fra1239-FRA\r\n"
+      -> "X-Cache: MISS\r\n"
+      -> "X-Cache-Hits: 0\r\n"
+      -> "X-Timer: S1493231257.113609,VS0,VE1136\r\n"
+      -> "Vary: Authorization\r\n"
+      -> "\r\n"
+      -> "324\r\n"
+      reading 804 bytes...
+      -> "{\"checkout_id\":1709862829,\"account_id\":2080478981,\"type\":\"goods\",\"short_description\":\"Purchase\",\"currency\":\"USD\",\"amount\":20,\"state\":\"authorized\",\"soft_descriptor\":\"WPY*Spreedly\",\"create_time\":1493231254,\"gross\":20.88,\"reference_id\":null,\"callback_uri\":null,\"long_description\":null,\"delivery_type\":null,\"fee\":{\"app_fee\":0,\"processing_fee\":0.88,\"fee_payer\":\"payer\"},\"chargeback\":{\"amount_charged_back\":0,\"dispute_uri\":null},\"refund\":{\"amount_refunded\":0,\"refund_reason\":null},\"payment_method\":{\"type\":\"credit_card\",\"credit_card\":{\"id\":2559797807,\"data\":{\"emv_receipt\":null,\"signature_url\":null},\"auto_capture\":false}},\"hosted_checkout\":null,\"payer\":{\"email\":\"test@example.com\",\"name\":\"Longbob Longsen\",\"home_address\":null},\"npo_information\":null,\"payment_error\":null,\"in_review\":false,\"auto_release\":true}"
+      read 804 bytes
+      reading 2 bytes...
+      -> "\r\n"
+      read 2 bytes
+      -> "0\r\n"
+      -> "\r\n"
+      Conn close
+    )
+  end
 
   def successful_store_response
     %({"credit_card_id": 3322208138,"state": "new"})
