@@ -2,6 +2,7 @@
 
 == HEAD
 * SafeCharge: Support credit transactions [shasum] #2404
+* WePay: Add scrub method [shasum] #2406
 
 == Version 1.65.0 (April 26, 2017)
 * Adyen: Add Adyen v18 gateway [adyenpayments] #2272
